@@ -4,6 +4,11 @@
 
 - v1.0.1030                                 -
 ---------------------------------------------
+- 2020-07-06                                -
+---------------------------------------------
+.: WSM: Task: Update loading spinner in Information  images (WSM-153)
+
+---------------------------------------------
 - 2020-07-01                                -
 ---------------------------------------------
 .: WSM: Task: Contact page (WSM-83)
